# courseworkbeta

./: .flake8  config.json  main.py  pyproject.toml  settings.py
data/: operations.xls
data/reports/: 20231204_195639_report.csv
src/: reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
